Fix Java 11 compatibility